objects/WT_Daily_Metric__c.object
<CustomObject>
    <fields>
        <fullName>WT_Date_Processed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_Action_Plans_Today__c</fullName>
        <label>Number of Action Plans Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_Action_Plans_Yesterday__c</fullName>
        <label>Number of Action Plans Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_Call_Logged_Today__c</fullName>
        <label>Number of Call Logged Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_Calls_Logged_Yesterday__c</fullName>
        <label>Number of Calls Logged Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_Calls_Scheduled_Today__c</fullName>
        <label>Number of Calls Scheduled Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_Calls_Scheduled_Yesterday__c</fullName>
        <label>Number of Calls Scheduled Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_New_Logins_Today__c</fullName>
        <label>Number of New Logins Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_New_Logins_Yesterday__c</fullName>
        <label>Number of New Logins Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_Unique_Login_Today__c</fullName>
        <label>Number of Unique Login Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_Unique_Login_Yesterday__c</fullName>
        <label>Number of Unique Login Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_Walk_Ins_Today__c</fullName>
        <label>Number of Walk Ins Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_of_Walk_Ins_Yesterday__c</fullName>
        <label>Number of Walk Ins Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Converted_By_Mortgage_Today__c</fullName>
        <label>Referrals Converted By Mortgage Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Converted_By_Mortgage_YDA__c</fullName>
        <label>Referrals Converted By Mortgage YDA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Converted_By_Retail_Today__c</fullName>
        <label>Referrals Converted By Retail Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Converted_By_Retail_YDA__c</fullName>
        <label>Referrals Converted By Retail Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Converted_By_Wealth_Today__c</fullName>
        <label>Referrals Converted By Wealth Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Converted_By_Wealth_YDA__c</fullName>
        <label>Referrals Converted By Wealth Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Qualified_By_Mortgage_Today__c</fullName>
        <label>Referrals Qualified By Mortgage Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Qualified_By_Mortgage_YDA__c</fullName>
        <label>Referrals Qualified By Mortgage YDA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Qualified_By_Retail_Today__c</fullName>
        <label>Referrals Qualified By Retail Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Qualified_By_Retail_YDA__c</fullName>
        <label>Referrals Qualified By Retail Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Qualified_By_Wealth_Today__c</fullName>
        <label>Referrals Qualified By Wealth Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Qualified_By_Wealth_YDA__c</fullName>
        <label>Referrals Qualified By Wealth Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Submitted_By_Mortgage_Today__c</fullName>
        <label>Referrals Submitted By Mortgage Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Submitted_By_Mortgage_YDA__c</fullName>
        <label>Referrals Submitted By Mortgage YDA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Submitted_By_Retail_Today__c</fullName>
        <label>Referrals Submitted By Retail Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Submitted_By_Retail_YDA__c</fullName>
        <label>Referrals Submitted By Retail Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Submitted_By_Wealth_Today__c</fullName>
        <label>Referrals Submitted By Wealth Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Submitted_By_Wealth_YDA__c</fullName>
        <label>Referrals Submitted By Wealth Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Report_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <label>Daily Metric</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Daily Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>